--- a/Crypto_Clustering.ipynb
+++ b/Crypto_Clustering.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -217,14 +217,14 @@
        "bitcoin-cash-sv                    93.73082  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load the data into a Pandas DataFrame and make the index the \"coin_id\" column.\n",
-    "market_data_df = pd.read_csv(\"Resources/crypto_market_data.csv\", index_col=\"coin_id\")\n",
+    "market_data_df = pd.read_csv(\"crypto_market_data.csv\", index_col=\"coin_id\")\n",
     "\n",
     "# Display sample data\n",
     "market_data_df.head(10)"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
        "max                   7852.089700  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,11 +411,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use the `StandardScaler()` module from scikit-learn to normalize the data from the CSV file\n"
+    "# Use the `StandardScaler()` module from scikit-learn to normalize the data from the CSV file\n",
+    "numeric_columns = market_data_df.select_dtypes(include=['float64', 'int64']).columns\n",
+    "scaler = StandardScaler()\n"
    ]
   },
   {
